電卓アプリ　第六回 　・各Stateクラスの処理を構築 　・CalcModelの処理を構築 　・文字表示のロジックを構築 　・AllClearのロジックを追加

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="minus">－</string>
     <string name="multi">×</string>
     <string name="div">÷</string>
+    <string name="allclear">AC</string>
 
     <!-- イコールの文字 -->
     <string name="equal">＝</string>
